- Upgraded to latest bmp2font library.

--- a/font2font/trunk/ChangeLog.txt
+++ b/font2font/trunk/ChangeLog.txt
@@ -1,6 +1,10 @@
 Change Log
 ----------
+ 
+ V1.1
+ 
+  - Upgraded to latest bmp2font library.
 
  V1.00
  
-    - First release.
+  - First release.
